--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "a simple cms app to learn and demonstrate sql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "webpack --progress --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
     "webpack": "^4.23.1"
-  },
-  "devDependencies": {
-    "webpack-cli": "^3.1.2"
   }
 }
