--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
+    "chalk": "^2.4.1",
     "webpack": "^4.23.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
   }
 }
