--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.1",
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "webpack": "^4.23.1"
   },
   "devDependencies": {
