--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.1",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "mysql": "^2.16.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "webpack": "^4.23.1"
   },
   "devDependencies": {
