--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "grommet": "^2.0.0-rc",
+    "grommet-icons": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mysql": "^2.16.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "styled-components": "^4.0.3",
     "webpack": "^4.23.1"
   },
   "devDependencies": {
