--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.1",
+    "clear": "^0.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "grommet": "^2.0.0-rc",
     "grommet-icons": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
