--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
     "dotenv": "^6.1.0",
@@ -26,6 +27,7 @@
     "grommet-icons": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "moment": "^2.22.2",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
